css/homepage.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;

}

body {
    /*background: #081b29;*/
background: #001a24;
background:  rgb(21, 36, 70) ;
    color: #ededed; 
}

.header {
    position:fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 20px 10%;
    background: #081b29;
    display: flex;
    justify-content: center;
}

.navbar{
    background-color: transparent;
    padding: 0px;
    border: 0px;  
     
}

.navbar a {
    font-size: 18px;
    color: #ededed;
    text-decoration: none;
    font-weight: 500;
    margin-left: -4.5px;
    transition: 0.3s;
    overflow: hidden;
    padding: 20.5px 35px;
    
}

.navbar a:hover {
    color: pink;
    border-bottom: 3px solid white;
    padding-bottom: 17px;
    
}
.active {

    background-color: rgb(22, 36, 67);
}

h1{
    height: 75vh;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    /* border: 2px solid powderblue; */
    padding: 0 10%;
    padding-bottom: 200px;
    margin-top: 200px;
    font-size: 80px;
    font-weight: 870;

}

p {
    font-size: 25px;
    margin: 30px 10% 20px 10%;
}

h2{
    font-size: 50px;
    margin: 0px 10% 20px 10%;
    text-align: center;
}
.summary h2{
    font-size: 50px;
    margin: 0px 10% 20px 10%;
    text-align: left;
}

.summary img{
    float: right;
    display: flex;
    margin-top: 0px;
    margin-right: 50px;
    margin-left: 30px;
    height: 60vh;
    border-radius: 10px;

}
.summary{
    /*display: inline-flex;*/
    align-items: center;
    padding-bottom: 300px;
}
.highlights{
    display: flex;
    flex-direction: row;
    gap: 50px;
    justify-content: center;
}
.highlights div{
    border-color: aliceblue;
    border-style: solid;
    width: 25%;
    margin-bottom: 50px;
    display: flex;
    flex-direction: column;
    background-color:#0000004f;
}
.highlights div h3{
    margin-top: 15px;
    margin-bottom: -10px;
    text-align: center;
    font-size: 30px;
    font-size: 3.5vw;
}
.highlights div img{
    margin: 10px;
    border-radius:5px ;
}
.highlights div a{
    align-self: center;
    padding: 10px;
    border-radius: 50px;
    background-color: rgb(35, 85, 210);
    margin-bottom: 20px;
    color: aliceblue;
    text-decoration: none;
}
.highlights div a:hover {
    border-bottom: 3px solid white;
    background-color: rgb(47, 118, 250);
    margin-bottom: 17px;
    transition: 0.2s;
}
.buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 3%;
    margin-bottom: 50px;
}
.buttons a{
    color: #ededed;
    text-decoration: none;
    padding: 5px;
    text-align: center;
    border-radius: 15px;
    background: #2368CC;
    background: radial-gradient(at left top, #2368CC, #103898);
    width: 15%;
    height: 15vw;
}


.buttons :hover{
    background: radial-gradient(at left top, #2d79ec, #1341ab);
    width: 16%;
    transition: all 0.2s;
    height: 16vw;
    margin-top: -0.5vw;
    border-radius: 19px;
}
.buttons a img{
    align-self: center;
    width: 70%;
    padding-top: 1vw;
    padding-bottom: 1vw;
    pointer-events: none;
}
.buttons a p{

    align-self: center;
    text-align: center;
    font-size: 1.9vw;
    font-weight: 700;
    overflow: hidden;
    margin-top: -1vw;
    pointer-events: none;

}

